Grails Upgrade changes
Initial JDK 11 with stable build

Initial JDK 11 with stable build

JDK 17 with stable build

Grails upgrade with 6.2.0 version and JDK 11

Disable Spring Boot autoconfiguration creating duplicate beans. Fix tests

Added org.grails.grails-plugin in build.gradle

remove ignored beans creation, fix default serializer creation

JDK 11 Stable version

Fix build.gradle for unused repos and correct README.md.